--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -63,7 +63,7 @@
         {{if sprint:}}
             <h4>{{=sprint.name}} - {{=sprint.weeks}} {{=T('Weeks')}}
             {{if not sprint.started:}}
-            <a href="{{=URL(c='default',f='launch_sprint',args=[sprint.id],)}}" class='btn btn-mini btn-success'>{{=T('Launch the sprint')}}</a>
+            <a href="{{=URL(c='default',f='launch_sprint',args=[sprint.id],)}}" class='btn btn-success'>{{=T('Launch the sprint')}}</a>
             {{else:}}
             <button class='disabled btn btn-success'>{{=T('Launched')}}</button>
             {{pass}}
@@ -85,12 +85,12 @@
                                 <li class="story">
                                     <div class="story_header">
                                         <div class="text_container">
-                                            <a href="#" class="editable-click story_card editable" data-type="text" data-placeholder="Click para escrever" data-pk="{{=story.id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="story" data-update="true">{{=story.title}}</a>
+                                            <a href="#" class="editable-click story_card editable" data-type="textarea" data-placeholder="Click para escrever" data-pk="{{=story.id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="story" data-update="true">{{=story.title}}</a>
                                         </div>
                                         <div class="buttons_container">
-                                            <button class="btn btn-mini expand_story pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'>
-                                                <i class="icon-chevron-down"></i></button>
-                                            <button class="btn btn-mini delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-remove"></i></button>
+                                            <button class="btn expand_story pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'>
+                                                <i class="icon-arrow-down"></i></button>
+                                            <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
                                             <select class="pull-right benefit" alt='{{=T("Benefit")}}' title='{{=T("Benefit")}}'>
                                             {{selects="P M G GG".split()}}
                                             {{if story.benefit:}}
@@ -113,7 +113,7 @@
                                             {{pass}}
                                             </select>
                                             <input class="pull-right story_points only_numbers" type="number" placeholder="?" min="1" value='{{=g_verifica_vazio(story.story_points)}}' alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'>
-                                            <button class="btn btn-mini create_definition_ready pull-right" alt='{{=T("Create Definition of Ready")}}' title='{{=T("Create Definition of Ready")}}'>+ {{=T('DR')}}</button>
+                                            <button class="btn create_definition_ready pull-right" alt='{{=T("Create Definition of Ready")}}' title='{{=T("Create Definition of Ready")}}'>+ {{=T('DR')}}</button>
                                             <span class="label qtd_definition_ready pull-right tip-bottom" alt='{{=T("Number of Definitions of Ready")}}' title='{{=T("Number of Definitions of Ready")}}'>{{=len(definition_ready[story.id])}}</span>
                                         </div>
                                         <div class="clearfix"></div>
@@ -126,12 +126,12 @@
                                                 <div class="definition_ready">
                                                     <div class="text_container">
                                                         <span class="label tip-right" alt='{{=T("Definition of Ready")}}' title='{{=T("Definition of Ready")}}'>{{=T('DR')}}</span>
-                                                        <a href="#" class="editable-click editable definition_ready_card" data-type="text" data-pk="{{=definition_ready[story.id][count].id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="definition_ready" data-update="true">{{=definition_ready[story.id][count].title}}</a>
+                                                        <a href="#" class="editable-click editable definition_ready_card" data-type="textarea" data-pk="{{=definition_ready[story.id][count].id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="definition_ready" data-update="true">{{=definition_ready[story.id][count].title}}</a>
                                                     </div>
                                                     <div class="buttons_container">
-                                                        <button class="btn btn-mini expand_definition_ready pull-right" alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'><i class="icon-chevron-down"></i></button>
-                                                        <button class="btn btn-mini delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-remove"></i></button>
-                                                        <button class="btn btn-mini create_task pull-right" alt='{{=T("Create Tast")}}' title='{{=T("Create Task")}}'>+ {{=T("Task")}}</button>
+                                                        <button class="btn expand_definition_ready pull-right" alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'><i class="icon-arrow-down"></i></button>
+                                                        <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
+                                                        <button class="btn create_task pull-right" alt='{{=T("Create Tast")}}' title='{{=T("Create Task")}}'>+ {{=T("Task")}}</button>
                                                     </div>
                                                     <div class="clearfix"></div>
                                                 </div><!-- definition_ready -->
@@ -139,11 +139,11 @@
                                                     <ul class="item_container zebra_row">
                                                         <li class="task">
                                                             <div class="text_container">
-                                                                <a href="#" class="editable-click editable" data-type="text" data-pk='{{=task["id"]}}' data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
+                                                                <a href="#" class="editable-click editable" data-type="textarea" data-pk='{{=task["id"]}}' data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
                                                             </div>
                                                             <div class="buttons_container">
-                                                                <button class="btn btn-mini delete_item pull-right" alt="Delete" title="Delete"><i class="icon-remove"></i></button>
-                                                                <button class="btn btn-mini comment_definition_ready pull-right" alt="Comment" title="Comment"><i class="icon-comment"></i></button>
+                                                                <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-trash"></i></button>
+                                                                <button class="btn comment_definition_ready pull-right" alt="Comment" title="Comment"><i class="icon-comment"></i></button>
                                                             </div>
                                                             <div class="clearfix"></div>
                                                         </li><!-- task -->
@@ -156,7 +156,7 @@
                                     {{pass}}
                                 </li><!-- story -->
                                 <div class="buttons_footer">
-                                    <button class="btn btn-mini btn-primary pull-right send_story_sprint">{{=T("Send to Sprint")}} <i class="icon-circle-arrow-right icon-white"></i></button>
+                                    <button class="btn btn-primary pull-right send_story_sprint">{{=T("Send to Sprint")}} <i class="icon-circle-arrow-right icon-white"></i></button>
                                     <div class="clearfix"></div>
                                 </div>
                             </ul>
@@ -180,12 +180,12 @@
                                 <li class="story">
                                     <div class="story_header">
                                         <div class="text_container">
-                                            <a href="#" class="editable-click story_card editable" data-type="text" data-placeholder="Click para escrever" data-pk="{{=story.id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="story" data-update="true">{{=story.title}}</a>
+                                            <a href="#" class="editable-click story_card editable" data-type="textarea" data-placeholder="Click para escrever" data-pk="{{=story.id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="story" data-update="true">{{=story.title}}</a>
                                         </div>
                                         <div class="buttons_container">
-                                            <button class="btn btn-mini expand_story pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'>
-                                                <i class="icon-chevron-down"></i></button>
-                                            <button class="btn btn-mini delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-remove"></i></button>
+                                            <button class="btn expand_story pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'>
+                                                <i class="icon-arrow-down"></i></button>
+                                            <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
                                             <select class="pull-right benefit" alt='{{=T("Benefit")}}' title='{{=T("Benefit")}}'>
                                             {{selects="P M G GG".split()}}
                                             {{if story.benefit:}}
@@ -208,7 +208,7 @@
                                             {{pass}}
                                             </select>
                                             <input class="pull-right story_points only_numbers" type="number" placeholder="?" min="1" value='{{=g_verifica_vazio(story.story_points)}}' alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'>
-                                            <button class="btn btn-mini create_definition_ready pull-right" alt='{{=T("Definition of Ready")}}' title='{{=T("Definition of Ready")}}'>+ {{=T('DR')}}</button>
+                                            <button class="btn create_definition_ready pull-right" alt='{{=T("Definition of Ready")}}' title='{{=T("Definition of Ready")}}'>+ {{=T('DR')}}</button>
                                             <span class="label qtd_definition_ready pull-right tip-bottom"  alt='{{=T("Number of Definitions of Ready")}}' title='{{=T("Number of Definitions of Ready")}}'>{{=len(definition_ready[story.id])}}</span>
                                         </div>
                                         <div class="clearfix"></div>
@@ -221,12 +221,12 @@
                                                 <div class="definition_ready">
                                                     <div class="text_container">
                                                         <span class="label tip-right" alt='{{=T("Definition of Ready")}}' title='{{=T("Definition of Ready")}}'>{{=T('DR')}}</span>
-                                                        <a href="#" class="editable-click editable definition_ready_card" data-type="text" data-pk="{{=definition_ready[story.id][count].id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="definition_ready" data-update="true">{{=definition_ready[story.id][count].title}}</a>
+                                                        <a href="#" class="editable-click editable definition_ready_card" data-type="textarea" data-pk="{{=definition_ready[story.id][count].id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="definition_ready" data-update="true">{{=definition_ready[story.id][count].title}}</a>
                                                     </div>
                                                     <div class="buttons_container">
-                                                        <button class="btn btn-mini expand_definition_ready pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'><i class="icon-chevron-down"></i></button>
-                                                        <button class="btn btn-mini delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-remove"></i></button>
-                                                        <button class="btn btn-mini create_task pull-right" alt='{{=T("Create Task")}}' title='{{=T("Create Task")}}'>+ {{=T("Task")}}</button>
+                                                        <button class="btn expand_definition_ready pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'><i class="icon-arrow-down"></i></button>
+                                                        <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
+                                                        <button class="btn create_task pull-right" alt='{{=T("Create Task")}}' title='{{=T("Create Task")}}'>+ {{=T("Task")}}</button>
                                                     </div>
                                                     <div class="clearfix"></div>
                                                 </div><!-- definition_ready -->
@@ -234,11 +234,11 @@
                                                     <ul class="item_container zebra_row">
                                                         <li class="task">
                                                             <div class="text_container">
-                                                                <a href="#" class="editable-click editable" data-type="text" data-pk='{{=task["id"]}}' data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
+                                                                <a href="#" class="editable-click editable" data-type="textarea" data-pk='{{=task["id"]}}' data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="task" data-update="true">{{=task["title"]}}</a>
                                                             </div>
                                                             <div class="buttons_container">
-                                                                <button class="btn btn-mini delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-remove"></i></button>
-                                                                <button class="btn btn-mini comment_definition_ready pull-right" alt='{{=T("Comment")}}' title='{{=T("Comment")}}'><i class="icon-comment"></i></button>
+                                                                <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
+                                                                <button class="btn comment_definition_ready pull-right" alt='{{=T("Comment")}}' title='{{=T("Comment")}}'><i class="icon-comment"></i></button>
                                                             </div>
                                                             <div class="clearfix"></div>
                                                         </li><!-- task -->
@@ -251,7 +251,7 @@
                                     {{pass}}
                                 </li><!-- story -->
                                 <div class="buttons_footer">
-                                    <button class="btn btn-mini btn-danger pull-right back_backlog"><i class="icon-circle-arrow-left icon-white"></i> {{=T("Back to Backlog")}}</button>
+                                    <button class="btn btn-danger pull-right back_backlog"><i class="icon-circle-arrow-left icon-white"></i> {{=T("Back to Backlog")}}</button>
                                     <div class="clearfix"></div>
                                 </div>
                             </ul>
