--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -143,7 +143,7 @@
                                                             </div>
                                                             <div class="buttons_container">
                                                                 <button class="btn delete_item pull-right" alt="Delete" title="Delete"><i class="icon-trash"></i></button>
-                                                                <button class="btn comment_definition_ready pull-right" alt="Comment" title="Comment"><i class="icon-comment"></i></button>
+                                                                <button class="btn comment_definition_ready pull-right" alt="Comment" title="Comment"><i class="icon-comment-custom"><span>0</span></i></button>
                                                             </div>
                                                             <div class="clearfix"></div>
                                                         </li><!-- task -->
@@ -238,7 +238,7 @@
                                                             </div>
                                                             <div class="buttons_container">
                                                                 <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
-                                                                <button class="btn comment_definition_ready pull-right" alt='{{=T("Comment")}}' title='{{=T("Comment")}}'><i class="icon-comment"></i></button>
+                                                                <button class="btn comment_definition_ready pull-right" alt='{{=T("Comment")}}' title='{{=T("Comment")}}'><i class="icon-comment-custom"><span>0</span></i></button>
                                                             </div>
                                                             <div class="clearfix"></div>
                                                         </li><!-- task -->
