--- a/views/default/projects.html
+++ b/views/default/projects.html
@@ -1,7 +1,7 @@
 {{extend 'default/layout_base.html'}}
 
 <div id="breadcrumb">
-    <a href='{{=URL("index")}}' title="Go to Home" class="tip-bottom"><i class="icon-home"></i> "{{=T('Home')}}"</a>
+    <a href='{{=URL("index")}}' title="Go to Home" class="tip-bottom"><i class="icon-home"></i> {{=T('Home')}}</a>
     <a href="#" class="current">{{=T('Projects')}}</a>
 </div>
 <div id="content-header">
