--- a/views/default/layout_base.html
+++ b/views/default/layout_base.html
@@ -35,8 +35,11 @@
         <link rel="shortcut icon" href="{{=URL('static','images/favicon.ico')}}" type="image/x-icon">
         <link rel="apple-touch-icon" href="{{=URL('static','images/favicon.png')}}">
         
+        <!-- Bootstrap -->
         <link rel="stylesheet" href='{{=URL("static","css/bootstrap.min.css")}}' />
         <link rel="stylesheet" href='{{=URL("static","css/bootstrap-responsive.min.css")}}' />
+        <link rel="stylesheet" href='{{=URL("static","css/elusive-webfont.css")}}'>
+
         <link rel="stylesheet" href='{{=URL("static","css/base.css")}}' />
         <link rel="stylesheet" href='{{=URL("static","css/base.grey.css")}}' class="skin-color" />
         <link rel="stylesheet" href='{{=URL("static","css/bootstrap-editable.css")}}' />
@@ -54,9 +57,18 @@
     <body class='{{=g_pagina_atual("default/board/%s" %request.args(0),"close_sidebar")}}'>
         
         <div id="header">
-            <h1><a href="{{=URL('projects')}}"><span class="color-logo">Scrumfor</span>.me</a></a></h1>       
-            <button id="toogle_sidebar" title="{{=T('Expand / Collapse Sidebar')}}" class="tip-right"><i class="icon-chevron-left icon-white"></i></button>
+            <h1><a href="{{=URL('index')}}" alt='Scrumforme Logo' title='Scrumforme Logo'><span class="color-logo">Scrumfor</span>.me</a></a></h1>
+            <ul id="projects">
+                <li><a href="{{=URL('projects')}}" alt='{{=T("New Project")}}' title='{{=T("New Project")}}'><i class="icon-plus"></i></a></li>
+                {{if "all_projects" in globals():}}
+                    {{for i in all_projects:}}
+                        <li class='{{=g_pagina_atual("default/product_backlog/%s" %i.id,"active")}}'><a href='{{=URL(c="default",f="product_backlog",args=[i.id])}}' alt='{{=i.name}}' title='{{=i.name}}'>{{=i.id}}</a></li>
+                    {{pass}}
+                {{pass}}
+            </ul>
+
         </div>
+            <div class="clearfix"></div>
 
         <div id="user-nav" class="navbar navbar-inverse">
             <ul class="nav btn-group">
@@ -64,49 +76,32 @@
                     <li>
                         <form action="">
                             <div id="search">
-                                <input type="text" placeholder='{{=T("Search here")}}'/><button type="submit" class="tip-right" title='{{=T("Search")}}'><i class="icon-search"></i></button>
+                                <input type="text" placeholder='{{=T("Search here")}}'/><button type="submit" class="tip-right" alt='{{=T("Search")}}' title='{{=T("Search")}}'><i class="icon-search-custom"></i></button>
                             </div>
                         </form>
                     </li>
-                    <li><a title="" href='{{=URL(f="user",args="profile",vars={"_next":"index"})}}'><i class="icon-config"></i></a></li>
-                    <li><a title="" href='{{=URL(f="user",args="logout",vars={"_next":"index"})}}'><i class="icon-logout"></i></a></li>
+                    <li><a href='{{=URL(f="user",args="profile",vars={"_next":"index"})}}' alt='{{=T("Profile")}}' title='{{=T("Profile")}}'><i class="icon-config-custom"></i></a></li>
+                    <li><a href='{{=URL(f="user",args="logout",vars={"_next":"index"})}}' alt='{{=T("Logout")}}' title='{{=T("Logout")}}'><i class="icon-logout-custom"></i></a></li>
                 {{ pass }}
             </ul>
         </div>
             
         <div id="sidebar" class="close_sidebar">
-            <a href="#" class="visible-phone"><i class="icon icon-home"></i> Dashboard</a>
+            <a href="#" class="visible-phone"><i class="icon-th-list"></i> {{=T('Menu')}}</a>
             <ul>
-                <li class='{{=g_pagina_atual("default/index","active")}}'><a href='{{=URL("index")}}'><i class="icon icon-home"></i> <span>Dashboard</span></a></li>
-                <li class='{{=g_pagina_atual("default/projects","active")}}'><a href="{{=URL('projects')}}"><i class="icon icon-plus-sign"></i> <span>{{=T('New Project')}}</span></a></li>
-                {{if "all_projects" in globals():}}
-                <li class='submenu'>
-                    <a href="#"><i class="icon icon-th-list"></i> <span>{{=T('My Projects')}}</span> <span class="label">{{=len(all_projects)}}</span></a>
-                    <ul>
-                        {{for i in all_projects:}}
-                            <li class='{{=g_pagina_atual("default/product_backlog/%s" %request.args(0),"active")}} {{=g_pagina_atual("default/board/%s" %i.id,"active")}}'><a href='{{=URL(c="default",f="product_backlog",args=[i.id])}}'>{{=i.name}}</a></li>
-                        {{pass}}
-                    </ul>
-                </li>                
-                {{pass}}
+                <!-- <li class='{{=g_pagina_atual("default/index","active")}}'><a href='{{=URL("index")}}'><i class="icon-home"></i> <span>Dashboard</span></a></li> -->
+                <li class='{{=g_pagina_atual("default/projects","active")}}'><a href='{{=URL("projects")}}' class="tip-right" alt="{{=T('My Projects')}}" title="{{=T('My Projects')}}"><i class="icon-dashboard"></i> <span>{{=T('My Projects')}}</span></a></li>
                 {{if request.function == "product_backlog" or request.function == "board":}}
-                {{if request.function == "board":}}
-                <li class='submenu active'>
-                {{else:}}
-                <li class='submenu active open'>
+                    <li class='{{=g_pagina_atual("default/board/%s" %request.args(0),"active")}}'><a href='{{=URL(f="board",args=[request.args(0)])}}' class="tip-right" alt="{{=T('Board')}}" title="{{=T('Board')}}"><i class="icon-list-alt"></i> <span>{{=T('Board')}}</span></a></li>
+                    <li class='{{=g_pagina_atual("default/product_backlog/%s" %request.args(0),"active")}}'><a href='{{=URL(f="product_backlog",args=[request.args(0)])}}' class="tip-right" alt="{{=T('Backlog')}}" title="{{=T('Backlog')}}"><i class="icon-tasks"></i> <span>{{=T('Backlog')}}</span></a></li>
+                    <li><a href="#" class="tip-right" alt="{{=T('Sprints')}}" title="{{=T('Sprints')}}"><i class="icon-credit-card"></i> <span>{{=T('Sprints')}}</span></a></li>
+                    <li><a href="#" class="tip-right" alt="{{=T('Archives')}}" title="{{=T('Archives')}}"><i class="icon-file"></i> <span>{{=T('Archives')}}</span></a></li>
+                    <li><a href="#" class="tip-right" alt="{{=T('Team')}}" title="{{=T('Team')}}"><i class="icon-group"></i> <span>{{=T('Team')}}</span></a></li>
+                    <li><a href="#" class="tip-right" alt="{{=T('Invite')}}" title="{{=T('Invite')}}"><i class="icon-child"></i> <span>{{=T('Invite')}}</span></a></li>
+                    <li><a href="#" class="tip-right" alt="{{=T('Metrics')}}" title="{{=T('Metrics')}}"><i class="icon-graph "></i> <span>{{=T('Statistics')}}</span></a></li>
+                    <li><a href="#" class="tip-right" alt="{{=T('Contacts')}}" title="{{=T('Contacts')}}"><i class="icon-address-book"></i> <span>{{=T('Contacts')}}</span></a></li>
                 {{pass}}
-                    <a href="#"><i class="icon icon-cog"></i> <span>{{=T('Project')}}</span></a>
-                    <ul>
-                        <li class='{{=g_pagina_atual("default/board/%s" %request.args(0),"active")}}'><a href='{{=URL(f="board",args=[request.args(0)])}}'>Board</a></li>
-                        <li class='{{=g_pagina_atual("default/product_backlog/%s" %request.args(0),"active")}}'><a href='{{=URL(f="product_backlog",args=[request.args(0)])}}'>{{=T('Backlog')}}</a></li>
-                        <li><a href="#">{{=T('Sprints')}}</a></li>
-                        <li><a href="#">{{=T('Archives')}}</a></li>
-                        <li><a href="#">{{=T('Team')}}</a></li>
-                        <li><a href="#">{{=T('Invite')}}</a></li>
-                    </ul>
-                </li>
-                {{pass}}
-                <li><a href="#"><i class="icon  icon-user"></i> <span>{{=T('Contacts')}}</span></a></li>
+                <li><button id="toogle_sidebar" class="tip-right" alt="{{=T('Expand / Collapse Menu')}}" title="{{=T('Expand / Collapse Menu')}}"><i class="icon-chevron-left icon-white"></i> <span>{{=T('Collapse Menu')}}</span></button></li>
             </ul>
 
         </div>
@@ -137,15 +132,17 @@
 
             <script src='{{=URL("static","js/jquery.min.js")}}'></script>
             <script src='{{=URL("static","js/bootstrap.min.js")}}'></script>
-            <script async defer src="{{=URL('static','js/web2py.js')}}"></script>
+            <script async defer src='{{=URL("static","js/web2py.js")}}'></script>
             <script async defer src='{{=URL("static","js/base.js")}}'></script>
             {{ if request.function == "product_backlog": }}
-            <script src="{{=URL('static','js/bootstrap-editable.min.js')}}"></script>
-            <script async defer src="{{=URL('static','js/product_backlog.js')}}"></script>
-            <script src="{{=URL('static','js/jquery.nanoscroller.min.js')}}"></script>
+            <script src='{{=URL("static","js/bootstrap-editable.min.js")}}'></script>
+            <script async defer src='{{=URL("static","js/product_backlog.js")}}'></script>
+            <script src='{{=URL("static","js/jquery.nanoscroller.min.js")}}'></script>
             <script async defer>
                 $(".window").nanoScroller({ sliderMaxHeight: 100, preventPageScrolling: true });
             </script>
             {{ pass }}
+
+            <!--[if lte IE 7]><script src='{{=URL("static","js/lte-ie7.js")}}'>></script><![endif]-->
     </body>
 </html>
