--- a/views/default/product_backlog.html
+++ b/views/default/product_backlog.html
@@ -89,7 +89,7 @@
                                         </div>
                                         <div class="buttons_container">
                                             <button class="btn expand_story pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'>
-                                                <i class="icon-arrow-down"></i></button>
+                                                <i class="icon-circle-arrow-down"></i></button>
                                             <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
                                             <select class="pull-right benefit" alt='{{=T("Benefit")}}' title='{{=T("Benefit")}}'>
                                             {{selects="P M G GG".split()}}
@@ -129,7 +129,7 @@
                                                         <a href="#" class="editable-click editable definition_ready_card" data-type="textarea" data-pk="{{=definition_ready[story.id][count].id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="definition_ready" data-update="true">{{=definition_ready[story.id][count].title}}</a>
                                                     </div>
                                                     <div class="buttons_container">
-                                                        <button class="btn expand_definition_ready pull-right" alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'><i class="icon-arrow-down"></i></button>
+                                                        <button class="btn expand_definition_ready pull-right" alt='{{=T("Story Points")}}' title='{{=T("Story Points")}}'><i class="icon-circle-arrow-down"></i></button>
                                                         <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
                                                         <button class="btn create_task pull-right" alt='{{=T("Create Tast")}}' title='{{=T("Create Task")}}'>+ {{=T("Task")}}</button>
                                                     </div>
@@ -184,7 +184,7 @@
                                         </div>
                                         <div class="buttons_container">
                                             <button class="btn expand_story pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'>
-                                                <i class="icon-arrow-down"></i></button>
+                                                <i class="icon-circle-arrow-down"></i></button>
                                             <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
                                             <select class="pull-right benefit" alt='{{=T("Benefit")}}' title='{{=T("Benefit")}}'>
                                             {{selects="P M G GG".split()}}
@@ -224,7 +224,7 @@
                                                         <a href="#" class="editable-click editable definition_ready_card" data-type="textarea" data-pk="{{=definition_ready[story.id][count].id}}" data-url="{{=URL('create_update_backlog_itens.json')}}" data-name="definition_ready" data-update="true">{{=definition_ready[story.id][count].title}}</a>
                                                     </div>
                                                     <div class="buttons_container">
-                                                        <button class="btn expand_definition_ready pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'><i class="icon-arrow-down"></i></button>
+                                                        <button class="btn expand_definition_ready pull-right" alt='{{=T("Expand")}}' title='{{=T("Expand")}}'><i class="icon-circle-arrow-down"></i></button>
                                                         <button class="btn delete_item pull-right" alt='{{=T("Remove")}}' title='{{=T("Remove")}}'><i class="icon-trash"></i></button>
                                                         <button class="btn create_task pull-right" alt='{{=T("Create Task")}}' title='{{=T("Create Task")}}'>+ {{=T("Task")}}</button>
                                                     </div>
